# openmemory

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/server/: .env.example  Cargo.toml  README.md  package.json
apps/server/migrations/: 001_create_memories.sql
apps/server/src/: main.rs  mcp.rs
apps/web/: README.md  package-lock.json  package.json
apps/web/app/: page.tsx
apps/web/app/api/memory/: route.ts
apps/web/components/: memory-columns.tsx  memory-dashboard.tsx
apps/web/components/ui/: data-table.tsx
docs/: DESIGN.md  gemini-plan.md
docs/plan/: gpt-plan.md
scripts/: requirements.txt  sample.sh  seed-data.py
